# bits

./: .clang-format  .gitignore  .travis.yml  Doxyfile  LICENSE  README.md  Vagrantfile  meson.build
bench/: atomics.cpp  cacheeffects.cpp  dispatch.cpp  hello_world.cpp  main.cpp  rcu.cpp  statics.cpp  syscall.cpp
include/bits/: cacheline.hpp  rcu.hpp  statics.hpp  tag_list.hpp
include/cpp/: hello_world.hpp
scripts/: clang-format.sh  cpu-scaling-off.sh  cpu-scaling-on.sh  doxygen.sh  install-deps.sh
src/: cacheline.cpp  got_plt_1.c  got_plt_2.c  hello_world.cpp  statics.cpp
test/: cacheline.cpp  hello_world.cpp  main.cpp  rcu.cpp  tag_list.cpp
